Fixed footer overlapping content and added movie poster for Inception

--- a/public/scss/base/_reset.scss
+++ b/public/scss/base/_reset.scss
@@ -8,6 +8,7 @@
 
 body {
     line-height: 1.5;
+    padding-bottom: 60px;
 }
 
 img, picture, video, canvas, svg {
